<resources>

    <string name="app_name">PIXEL Touch</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_touch_paint">TouchPaint</string>
    
    <string name="title_activity_main">MainActivity</string>
    
   <string name="menu_about_title">About</string> 
   <string name="menu_about_summary">http://ledpixelart.com\n\nDesigned by Open Gadgets LLC</string>
   <string name="versionString">Version</string> 
   <string name="bluetoothPairingString">Please ensure Bluetooth pairing has been completed prior. The Bluetooth pairing code is: 4545."</string> 
   
   <string name="menu_instructions_title">Instructions</string>
   <string name="setupInstructionsString">First pair your Android device to PIXEL which will show up as \'IOIO\' in Bluetooth using code 4545.\n\nJust draw on the screen with your finger and the image will appear on PIXEL.\n\nFrom the menu, you can turn off fade, clear the screen, and choose the color.\n\nNote the last image will remain displayed on PIXEL even after your Android device is switched off.</string>
   
      
     
    <string name="prefTitle">PIXEL Touch Settings</string>
    <string name="menu_prefs_title">Settings</string>
    <string name="prefSummary">PIXEL Touch Settings</string>
    
    <string name="OKText">OK</string>   
    <string name="notFoundString">PIXEL Not Found</string>   
   
    <string name="selected_matrix">selected_matrix</string>
    <string name="matrix">LED Panel Selection</string>
    <string name="matrixSummary">Select your LED Panel Model</string>    
    <string name="dialogTitleMatrix">LED Panel Selection</string>
    <string name="matrix_default_value">3</string>   
    
    <string name="bluetooth_pair">Blueooth Pairing</string>
    <string name="bluetooth_pairSummary">Shortcut to the Bluetooth settings screen. Pair to IOIO using code: 4545</string>
   
    <string name="noSleep">Disable Power Savings</string>    
    <string name="pref_noSleepDefault">false</string>
    <string name="noSleepSummary">Forces the app to be always on, your device will not go into power savings mode while this app is running. Good if using as a Kiosk for example. </string>
    
    <string name="fading">Fading</string>    
    <string name="fadingDefault">false</string>
    <string name="fadingSummary"></string>
    
    <string name="setupInstructionsStringTitle">Instructions</string> 
    
    <string name="firstTime_instructions">After this completes, select Instructions from the menu to use your own images</string>
    
    <string name="FadeMenuLabel">Toggle Fading</string>
    <string name="ClearMenuLabel">Clear</string>
    <string name="ColorMenuLabel">Color</string>    
    <string name="pickColorTitle">Default Color</string> 
    
    <string name="selected_penSize">selected_penSize</string>
    <string name="penSize">Pen Size</string>
    <string name="penSizeSummary">Select the Pen Size</string>    
    <string name="penSizedDialogTitle">Pen Size</string>
    <string name="penSizeTitle">Pen Size</string>
    <string name="penSize_default_value">2</string>  
    
    <string name="fade_speed_key">fade_speed_key</string>
    <string name="fade_speed_title">Fade Speed</string>
    <string name="fade_speed_summary">How fast the image will fade (if Fading is on)</string>    
    <string name="fade_speed_dialogTitle">Fade Speed</string>
    <string name="fadeSpeedTitle">Fade Speed</string>
    <string name="fade_speed_default_value">3</string>  
   
    <string name="debugMode">Debug Mode</string>    
    <string name="pref_debugMode">pref_debugMode</string>
    <string name="pref_debugModeDefault">false</string>    
    <string name="debugModeSummary">Displays debug messages, use to see how often the Bluetooth connections are getting disconnected and connected as well as other debug messages</string>
    
    
    <string name="startupInstructions">Draw on the screen and use the menu to change the color, pen size, and fading.</string> 
    
    

</resources>


