<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/xml/mypreferences.xml -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="flight_option_preference"
    android:title="@string/prefTitle"
    android:summary="@string/prefSummary">
 
 
 <PreferenceScreen 
    android:title="@string/bluetooth_pair"
    android:summary="@string/bluetooth_pairSummary">
   <intent android:action="android.settings.BLUETOOTH_SETTINGS">
   </intent>
   </PreferenceScreen>
   
   <!--  <CheckBoxPreference
    android:title="@string/scanAll"
    android:key="pref_scanAll"
    android:defaultValue="@string/pref_scanAll_default"
    android:summary="@string/scanAllSummary"/>-->
    
    <ListPreference
    android:key="@string/selected_penSize"
    android:title="@string/penSizeTitle"
    android:summary="@string/penSizeSummary"
    android:entries="@array/penSize_options"
    android:entryValues="@array/penSize_values"
    android:dialogTitle="@string/penSizedDialogTitle"
    android:defaultValue="@string/penSize_default_value" />
    
    
    <CheckBoxPreference
    android:title="@string/fading"
    android:key="pref_fading"
    android:defaultValue="@string/fadingDefault"
    android:summary="@string/fadingSummary"/>
    
    <ListPreference
    android:key="@string/fade_speed_key"
    android:title="@string/fade_speed_title"
    android:summary="@string/fade_speed_summary"
    android:entries="@array/fade_speed"
    android:entryValues="@array/fade_values"
    android:dialogTitle="@string/fade_speed_dialogTitle"
    android:defaultValue="@string/fade_speed_default_value" />
    
    
    
    
    <CheckBoxPreference
    android:title="@string/noSleep"
    android:key="pref_noSleep"
    android:defaultValue="@string/pref_noSleepDefault"
    android:summary="@string/noSleepSummary"/>
    
    
    
      <!-- <CheckBoxPreference
    android:title="Call Taxi"
    android:key="pref_taxi"
    android:summary="Call Taxi when Tipsy or Drunk"/> -->
   
    <ListPreference
    android:key="@string/selected_matrix"
    android:title="@string/matrix"
    android:summary="@string/matrixSummary"
    android:entries="@array/matrix_options"
    android:entryValues="@array/matrix_values"
    android:dialogTitle="@string/dialogTitleMatrix"
    android:defaultValue="@string/matrix_default_value" />
  
  
  
   <yuku.ambilwarna.widget.AmbilWarnaPreference
                android:key="pref_pickColor"
                android:defaultValue="0xffff0000" 
                android:title="@string/pickColorTitle" />
   
    <CheckBoxPreference
    android:title="@string/debugMode"
    android:key="pref_debugMode"
    android:defaultValue="@string/pref_debugModeDefault"
    android:summary="@string/debugModeSummary"/>  
   
    <!--<net.margaritov.preference.colorpicker.ColorPickerPreference
    android:key="pref_pickColor"
    android:title="@string/pickColorTitle"
    android:defaultValue="0xff6699cc"    
    alphaSlider="true"                              
    />-->
    
  
   <!--
    <net.margaritov.preference.colorpicker.ColorPickerPreference    
    android:key="pref_pickColor"
    android:title="@string/pickColorTitle"
    android:summary="@string/pickColorTitle"
    android:defaultValue="@integer/COLOR_GREEN"    
    alphaSlider="true"                              
    />-->
    
    
     
   </PreferenceScreen>